# flt3-itd-detection

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GIT_WORKFLOW_GUIDE.md  IMPORT_ISSUES_FIXED.md  INTEGRATION_GUIDE.md  INTEGRATION_STATUS.md  LICENSE  README.md  REFACTORING_COMPLETE.md  Sample_multifasta_validation.fa.fai  bam_extractor.py  cigar_itd_detector.py  config.py  dual_reference_validator.py  flt3_itd.py  flt3_itd_pipeline.py  flt3_performance_tester.py  html_reporter.py  integration_adapter.py  main_module.py  pyproject.toml  read_size_analyzer.py  requirements.txt  softclip_itd_detector.py  vcf_writer.py
.github/workflows/: ci.yml  release.yml
docs/: algorithm.md
split_read_approach/: ITD_SIZE_FIX_DOCUMENTATION.md  PARAMETER_FLOW_REFACTORING.md  PIE_CHART_FIX_DOCUMENTATION.md  SIZE_ANALYSIS_HTML_INTEGRATION.md  bam_extractor.py  config.py  debug_reference_issue.py  debug_validation.py  flt3_performance_tester.py  html_reporter.py  itd_generator.py  itd_size_corrector.py  main_module.py  paired_aligner.py  read_size_analyzer.py  read_splitter.py  reference_validator.py  test_html_with_size_analysis.py  test_itd_ref.py  test_size_correction.py  the bam first few lines.txt  vcf_writer.py
tests/: README.md  test_flt3_itd.py
